kiali/03-gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway-kiali
  namespace: istio-system
spec:
  servers:
    - hosts:
        - kiali.teste.com.br
      port:
        name: http
        number: 80
        protocol: HTTP
      # FROM TLS BE ENABLE
#      tls:
#        mode: SIMPLE # enables HTTPS on this port
#        credentialName: ingress-cert-testecombr
  selector:
    istio: ingressgateway
